testsuite/tests/polykinds/T7438.stderr

T7438.hs:6:14: error:
    Couldn't match expected type ‘r1’ with actual type ‘r0’
      ‘r0’ is untouchable
        inside the constraints: t0 ~ t1
        bound by a pattern with constructor:
                   Nil :: forall (k :: BOX) (b :: k). Thrist b b,
                 in an equation for ‘go’
        at T7438.hs:6:4-6
    ‘r0’ is a rigid type variable bound by
         the inferred type of go :: Thrist t0 t1 -> r0 -> r1 at T7438.hs:6:1
    ‘r1’ is a rigid type variable bound by
         the inferred type of go :: Thrist t0 t1 -> r0 -> r1 at T7438.hs:6:1
    Possible fix: add a type signature for ‘go’
    Relevant bindings include
      acc :: r0 (bound at T7438.hs:6:8)
      go :: Thrist t0 t1 -> r0 -> r1 (bound at T7438.hs:6:1)
    In the expression: acc
    In an equation for ‘go’: go Nil acc = acc
